# rudolph

./: .clang-tidy  .clangd  .gitignore  .rgignore  .vale.ini  3input.csv  4input.csv  ARCHITECTURE.md  CMakeLists.txt  README.md  criterion.wrap  justfile  main.c  memory_mapped_file_rudolph.c  meson.build  nully.csv  ru.c  rudolph.c  sample.csv  space.c
src/: CMakeLists.txt  commands.h  concat.c  echo.c  headkit.c  main.c  meson.build  reader.c  rower.c  rudolph.c  slice.c  stats.c
subprojects/: datatype99.wrap  log.wrap
tests/: CMakeLists.txt  concat.test.c  helpers.c  helpers.h  meson.build  options.test.c  reader.test.c  test.c
website/: README.md  astro.config.mjs  package-lock.json  package.json
website/src/content/docs/: index.mdx
website/src/content/docs/introduction/: usage.md
website/src/content/docs/reference/: example.md
website/src/content/docs/resources/: benchmark.mdx
writing_rules/config/vocabularies/rudolph/: accept.txt
